--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    versión 2-b feat/5-google-maps-home-ui
+    versión 2-c feat/5-google-maps-home-ui
 </body>
 </html>
