--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
+    <script src="index.js"></script>
 </head>
 <body>
-    versión 2-c feat/5-google-maps-home-ui
+    versión 2-d feat/5-google-maps-home-ui
 </body>
 </html>
